# wintermaker

./: .gitignore  README.md  pyproject.toml
config/: class_rules.yaml  default.yaml
config/regions/: buergle.yaml  buerglen.yaml  choerbschhorn.yaml  demo_test.yaml  finsteraarhorn.yaml  sentischhorn.yaml  zimmerwald.yaml
config/rendering_profiles/: choerbschhorn.yaml  davos.yaml  default.yaml  demo_test.yaml  finsteraarhorn.yaml  sentischhorn.yaml  zimmerwald.yaml
docs/: regions.md  rendering_profiles.md  roadmap.md
notebooks/: 01_explore_reference_images.ipynb
scripts/: extract_tlm3d.py
tests/: conftest.py  test_config_paths.py  test_data_prep.py  test_forest_structure.py  test_geometry_preservation.py  test_masks.py  test_relief.py  test_rendering_rules.py  test_snow_priority.py  test_snow_surface.py  test_snow_thickness_rules.py  test_summer_reconcile.py  test_summer_structure.py  test_viewer_export.py
viewer/: index.html  main.js  style.css
winter_ortho/: __init__.py  cli.py  library.py  pipeline.py
winter_ortho/ai_refinement/: __init__.py  constrained_diffusion.py  segment.py  texture_refine.py
winter_ortho/data_prep/: __init__.py  dem.py  region.py  wmts.py
winter_ortho/features/: __init__.py  image_features.py  terrain.py  texture.py
winter_ortho/io/: __init__.py  dem.py  orthophoto.py  tlm3d.py
winter_ortho/masks/: __init__.py  build_masks.py  protect_masks.py  refine_masks.py  summer_reconcile.py
winter_ortho/preprocessing/: __init__.py  align.py  rasterize_vectors.py  tiling.py
winter_ortho/qa/: __init__.py  geometry_checks.py  (+2 more)
(+26 files in other folders)
