[project]
name = "winter-ortho"
version = "0.1.0"
description = "Rule-based winter orthophoto generation from summer imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.8",
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fiona>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
winter-ortho = "winter_ortho.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["winter_ortho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
